fix: fix text spacing

--- a/css/services.css
+++ b/css/services.css
@@ -13,7 +13,6 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 30px;
-    letter-spacing: 1px;
     color: #7e7d7d;
     display: block;
 }
